--- a/wp-content/themes/delivering-happiness/assets/sass/pages/_work.scss
+++ b/wp-content/themes/delivering-happiness/assets/sass/pages/_work.scss
@@ -250,7 +250,7 @@
                     }
                 }
                 input.medium, select.medium {
-                    width: 98%;
+                    width: 100%;
                 }
             }
             .gform_body {
